# downloaded-quarks

./: README.md  update.py
APCmini/: README.md
ArduinoQuaternion/: ArduinoQuaternion.quark  ArduinoQuaternion.sc
AudacityLabels/: AudacityLabels.quark  README.md
Automation/: Automation.quark  Automation.sc  AutomationClient.sc  AutomationGui.sc  README.md
BandSplitter/: BandSplitter.quark  BandSplitter.sc
Bending/: Bending.quark  README.md
CVCenter/: README.md
Collapse/: Collapse.quark  Collapse.sc
CommonTestsGUI/: CommonTestsGUI.quark  README.md  TestSCCompositeView.sc  TestSCHLayout.sc  TestSCScrollView.sc
Connection/: Connection.quark  Connection.sc  ControlValue.sc  PeriodicUpdater.sc  Slots.sc  UpdateChannel.sc  UpdateDispatcher.sc  UpdateForwarder.sc  UpdateTracer.sc  ViewActionUpdater.sc  extCollection.sc  extDictionary.sc  extFunction.sc  extNode.sc  extObject.sc  extView.sc  extWarp.sc
ContextSnake/: ContextSnake.quark  ContextSnake.sc
EnvScaleView/: EnvScaleView.sc  README.md
Esp/: Esp.quark  Esp.sc
EventArray/: EventArray.quark  README.md
FancySlider/: FancySlider.quark  README.md
FilterTools/: .gitattributes  README.md
FreeAfter/: FreeAfter.quark  FreeAfter.sc
Freesound/: Freesound.quark  Freesound.sc  Readme.md
GameLoop/: .gitignore  README.md  examples.scd
GamelanPatterns/: GamelanPatterns.quark  README.md
GamelanSynthesis/: GamelanSynthesis.quark  README.md
GeoGraphy/: GeoGraphy.quark
JITLibExtensions/: JitGui_tests.scd
JITMIDIKtl/: NanoKtl.sc  NanoKtl2.sc
JoshMisc/: README.md  (+1 more)
caAC-MLib/UGens/Demand/Dstoch/: CMakeCache.txt  CMakeLists.txt  DemoFile_Stoch.rtf  Dstoch.cpp  Dstoch.sc  Dstoch.scx  Makefile  cmake_install.cmake
caAC-MLib/UGens/PM/TwinReson/: CMakeCache.txt  CMakeLists.txt  Makefile  TwinReson.cpp  TwinReson.sc  TwinReson.scx  cmake_install.cmake  test.scd
caAC-MLib/UGens/PM/VariableState/: CMakeLists.txt  Gosc.cpp  Gosc.sc  Gosc.scx  test.scd
caAC-MLib/UGens/PM/VariableState/old/: GoscOld.cpp
trnsnd/nl/plugins/: CAUGens.cpp  CAUGens.scx  CMakeLists.txt  NLUGens.cpp  NLUGens.scx
(+855 files in other folders)
